--- a/app/views/home/_notifications.html.erb
+++ b/app/views/home/_notifications.html.erb
@@ -1,20 +1,22 @@
-<h3>Notifications</h3>
-<div>
+<div class="home-logview">
 <table>
-  <thead>
     <tr>
       <th>Details</th>
       <th>Time</th>
     </tr>
-  </thead>
 
-  <tbody>
+
     <% @notifications.each do |notification| %>
-      <tr>
-        <td><%= notification.event_details %></td>
+      <tr class="home-main-row">
+        <td class="open_event" , id = "<%= notification.id %>"><%= notification.event_details %></td>
         <td><%= notification.event_time %></td>
       </tr>
+
+      <tr class="event-drop-down" id = "id<%= notification.id %>" , style = "display:none">
+        <td colspan="2" ><%= render_event(notification) %></td>
+      </tr>
+
     <% end %>
-  </tbody>
 </table>
+
 </div>
