--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,17 @@
     </ul>
     <ul id="menu-user-links">
       <% if current_user %>
+
+
           <li><%= current_user[:email] %></li>
           <li>
             <%= link_to 'Log out', log_out_path%>
           </li>
+
+          <% if current_user.is_manager %>
+           <li> <%= link_to 'Sign up', sign_up_path%> </li>
+          <% end %> 
+
       <% else %>
           <li>
             <%= link_to 'Sign up', sign_up_path%>
