--- a/app/views/graphs/_expenditure.html.erb
+++ b/app/views/graphs/_expenditure.html.erb
@@ -1,3 +1,17 @@
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<p>get_total_revenue</p>
+<%= area_chart get_total_revenue %>
+<p>get_total_number_of_events</p>
+<%= area_chart get_total_number_of_events %>
+<p>get_total_volume</p>
+<%= area_chart get_total_volume %>
+<p>get_total_weight</p>
+<%= area_chart get_total_weight %>
+<p>get_total_number_of_items</p>
+<%= area_chart get_total_number_of_items %>
 
-<%= area_chart get_expenditure_but_better %>
+<p>get_critical_routes</p>
+<%= line_chart get_critical_routes %>
+
+
+
