i don't even know

--- a/app/views/mail/show.html.erb
+++ b/app/views/mail/show.html.erb
@@ -10,6 +10,16 @@
       <td class="mail-label" ><a>tracking id</a></td>
       <td><%= @mail.id %></td>
     </tr>
+
+    <tr>
+      <td class="mail-label" ><a>sender</a></td>
+      <td><%= @mail.sender %></td>
+    </tr>
+
+    <tr>
+      <td class="mail-label" ><a>recipient</a></td>
+      <td><%= @mail.receiver %></td>
+    </tr>
     
     <tr>
       <td class="mail-label" ><a>destination</a></td>
