--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -5,11 +5,12 @@
   <thead>
     <tr>
       <th>id</th>
-      <th>destination</th>
+      <th>sender</th>
+      <th>recipient</th>
       <th>origin</th>
+      <th>destination</th>
       <th>Priority</th>
       <th>Sent</th>
-      <th>Received</th>
       <th>Cost</th>
       <th>Current location</th>
   </thead>
@@ -18,11 +19,12 @@
     <% @mail.each do |mail| %>
       <tr class="list-row" >
         <td><%= mail.id %></td>
-        <td><%= mail.to %></td>
+        <td><%= mail.sender %></td>
+        <td><%= mail.receiver %></td>
         <td><%= mail.from %></td>
+        <td><%= mail.to %></td>
         <td><%= mail.priority %></td>
         <td><%= mail.send_date %></td>
-        <td><%= mail.receive_date %></td>
         <td><%= mail.cost %></td>
         <td><%= mail.current_location %></td>
         <td class="mail-actions"><%= link_to 'View', mail %>
