--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@mail) do |f| %>
-  <% if @mail.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@mail.errors.count, "error") %> prohibited this mail from being saved:</h2>
-
-      <ul>
-      <% @mail.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  
 
   <table class="new-mail-table" >
     
@@ -129,6 +119,16 @@
   <tr>
     <td class="back-button" ><%= link_to 'Back', mail_index_path %></td>
     <td><%= f.submit %></td>
+    <% if @mail.errors.any? %>
+    <td id="error_explanation">
+      <h2><%= pluralize(@mail.errors.count, "error") %> prohibited this mail from being saved:</h2>
+      <ul>
+      <% @mail.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </td>
+  <% end %>
   </tr>
 
   </table>
