--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,14 +10,13 @@
 	  
 	<tr>
 		<td>
-			 
-	
 			<form action='/search'>
 				<input name="query" type="text" />
 				<input type='submit' value='Search' />
+
 			</form>
   		</td> 
-  
+  				<%= render 'search' %>
   		<td>
 			<%= render 'notifications' %>
   		</td>
