--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -24,12 +24,102 @@
 }
 
 .routes-card table {
-	margin: 0px 10px 0px 0px;
-	padding: 10px 5px 10px 5px;
+	margin: 0px 30px 0px 30px;
+	padding: 30px 5px 30px 0px;
+	border-collapse: collapse;
 }
 
 .routes-card th {
 	text-transform: uppercase;
 	font-weight: 400;
-	padding: 5px 0px 15px 0px;
+	padding: 5px 15px 5px 15px;
+}
+
+
+
+.routes-card td {
+	font-weight: 300;
+	padding: 5px 15px 5px 15px;
+}
+
+.main-table td {
+	border: solid;
+	border-width: 2px 0px 2px 0px;
+	border-color: #DEDEDE;
+}
+
+
+.route-bold {
+	text-transform: uppercase;
+	font-weight: 400;
+}
+
+.grey-button a {
+	display: inline-block;
+	*display: block;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #000;
+	background-color: #CDCDCD;
+	padding: 5px 15px 5px 15px;
+	font-size: 15px;
+	font-weight: 400;
+}
+
+.grey-button a:hover {
+	background-color: #DDDDDD;
+}
+
+.green-button a {
+	display: inline-block;
+	*display: block;
+	text-decoration: none;
+	padding: 5px 15px 5px 15px;
+	background-color: rgba(64, 102, 24, 0.8);
+	text-transform: uppercase;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 400;
+	margin: 10px 0px 0px 35px;
+}
+
+.green-button a:hover {
+	background-color: rgba(64, 102, 24, 0.7);
+}
+
+form input[type='text'] {
+  width: 250px;
+  padding: 6px 0px 6px 5px;
+  margin: 0px 0px 0px 0px;
+  font-weight: 300;
+  font-size: 15px;
+  font-style: italic;
+  text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
+  border: 1px solid #CFCFCF;
+}
+
+form input[type='text']:focus {
+  background: #dfe9ec;
+  color: #414848;
+  font-style: normal;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
+}
+
+form input[type='submit'] {
+	display: inline-block;
+	text-decoration: none;
+	padding: 5px 15px 5px 15px;
+	background-color: rgba(64, 102, 24, 0.8);
+	text-transform: uppercase;
+	float: right;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 400;
+	margin: 20px 20px 0px 10px;
+}
+
+form input[type='submit']:hover {
+	background-color: rgba(64, 102, 24, 0.7);
 }
