--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@route) do |f| %>
   <% if @route.errors.any? %>
     <div id="error_explanation">
@@ -11,25 +12,40 @@
     </div>
     <% end %>
 
+
+
     <div class="field">
-      <br/>
-      <%= f.label :name, "Name" %>
-      <br/>
-      <%= f.text_field :name , required: true %>
-      <br/>
+
+    <table>
+        <tr>
+          <td class="route-bold"><%= f.label :name, "Name" %></td>
+          <td><%= f.text_field :name , required: true %></td>
+        </tr>
+
+      
+        <% @route.connections.each do |route| %>
+        <tr>
+          <td class="route-bold">connection</td>
+          <td><%= route.location_one.to_s + "-" + route.location_two.to_s %></td>
+        </tr>
+        <% end %>
+
         <% if !@connections.nil? %>
-        <%= f.label :name, "Connection" %>    
-        <br/>
-        <% connections_array = @connections.map { |connection| [connection.name_with_locations ,connection.id] } %>
+        <tr>
+          <td class="route-bold"><%= f.label :name, "new connection" %></td>
+          <td><% connections_array = @connections.map { |connection| [connection.name_with_locations ,connection.id] } %>
         <%=f.select :connection, options_for_select(connections_array),  inlcude_blank: "Choose one!", required: true %>
         <% else %>
            There are no more connections to add to this route.
-        <% end %>
-      <br/>
-      <% @route.connections.each do |route| %>
-      <%= route.location_one.to_s + "-" + route.location_two.to_s %>
+        <% end %></td>
+        </tr>
 
-      <% end %>
+    </table>
+
+      
+      
+
+      
         <div class="actions">
           <% if !@connections.nil? %>
         <%= f.submit %>
