--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -4,5 +4,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', routes_path %>
+<div class="grey-button"><%= link_to 'Back', routes_path %></div>
 </div>
