--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -3,5 +3,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', routes_path %>
+<div class="grey-button"><%= link_to 'Back', routes_path %></div>
 </div>
