update graph headings

--- a/app/views/business/_tabview.html.erb
+++ b/app/views/business/_tabview.html.erb
@@ -12,7 +12,7 @@
         </ul>
         </div>
         <div id="tabs_container">
-            <div id="tab1" style = "display:none">
+            <div id="tab1">
                <%= render partial:"graphs/expenditure" %>
             </div>
             <div id="tab2" style = "display:none">
