--- a/app/views/graphs/_expenditure.html.erb
+++ b/app/views/graphs/_expenditure.html.erb
@@ -1,6 +1,5 @@
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-
-<p>get_total_revenue</p>
+<p>Get total revenue</p>
 <%= area_chart get_total_revenue %>
 
 
