--- a/app/views/graphs/_times.html.erb
+++ b/app/views/graphs/_times.html.erb
@@ -1,4 +1,4 @@
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 
-<p>get_critical_routes</p>
+<p>Get critical routes</p>
 <%= line_chart get_critical_routes %>
