some search styling

--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -159,6 +159,11 @@
 	color: #fff;
 	font-size: 15px;
 	font-weight: 400;
+}
+
+.mail-edit-button a:hover {
+	background-color: rgba(64, 102, 24, 0.7);
+
 }	
 
 .mail-back-button a {
