--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,7 +19,6 @@
 }
 
 .home-card table {
-	width: 100%;
 	padding: 0px 30px 0px 20px;
 	vertical-align: top;
 }
@@ -35,7 +34,7 @@
 	vertical-align: top;
 }
 
-.home-card form input[type='text'] {
+input[type='text'] {
   width: 300px;
   padding: 6px 0px 6px 5px;
   margin: 0px 0px 0px 0px;
@@ -46,9 +45,19 @@
   border: 1px solid #DEDEDE;
 }
 
-.home-card form input[type='submit'] {
-	padding: 10px 10px 10px 10px;
+input[type='submit'] {
+	padding: 5px 10px 5px 10px;
+	margin: 0px 0px 0px 10px;
+	color: #fff;
+	text-transform: uppercase;
+	background-color: rgba(64, 102, 24, 0.8);
 }
+
+input[type='submit']:hover {
+	background-color: rgba(64, 102, 24, 0.7);
+}
+
+
 
 .home-logview table {
 	margin: 20px;
@@ -61,6 +70,19 @@
 	font-weight: 400;
 	padding: 5px 0px 10px 10px;
 	text-align: center;
+}
+
+.search-table {
+	border-collapse: collapse;
+	width: 100%;
+	margin: 10px 10px;
+	text-transform: uppercase;
+}
+
+.search-table a {
+	color: #000;
+	text-decoration: none;
+
 }
 
 .home-main-row:hover {
@@ -80,4 +102,12 @@
 
 .home-logview .event-drop-down td {
 	padding: 10px 15px 20px 15px;
+}
+
+.search-half {
+	width: 50%;
+} 
+
+.noti-half{
+	width: 50%;
 }
