--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -46,7 +46,7 @@
       
 
       
-        <div class="actions">
+        <div class="routes-actions">
           <% if !@connections.nil? %>
         <%= f.submit %>
         <% end %>
