--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -87,7 +87,7 @@
 	background-color: rgba(64, 102, 24, 0.7);
 }
 
-form input[type='text'] {
+.routes-card form input[type='text'] {
   width: 250px;
   padding: 6px 0px 6px 5px;
   margin: 0px 0px 0px 0px;
@@ -98,7 +98,7 @@ form input[type='text'] {
   border: 1px solid #CFCFCF;
 }
 
-form input[type='text']:focus {
+.route-card form input[type='text']:focus {
   background: #dfe9ec;
   color: #414848;
   font-style: normal;
@@ -107,7 +107,7 @@ form input[type='text']:focus {
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
 }
 
-form input[type='submit'] {
+.routes-actions input{
 	display: inline-block;
 	text-decoration: none;
 	padding: 5px 15px 5px 15px;
@@ -120,6 +120,6 @@ form input[type='submit'] {
 	margin: 20px 20px 0px 10px;
 }
 
-form input[type='submit']:hover {
+.routes-actions input:hover {
 	background-color: rgba(64, 102, 24, 0.7);
 }
